postgresql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: postgresql
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: postgresql.tonnysousa.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres
                port:
                  number: 5432
